; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_corgi_lcd.c_corgi_lcd_set_power.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/backlight/extr_corgi_lcd.c_corgi_lcd_set_power.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lcd_device = type { i32 }
%struct.corgi_lcd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lcd_device*, i32)* @corgi_lcd_set_power to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @corgi_lcd_set_power(%struct.lcd_device* %0, i32 %1) #0 {
  %3 = alloca %struct.lcd_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.corgi_lcd*, align 8
  store %struct.lcd_device* %0, %struct.lcd_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.lcd_device*, %struct.lcd_device** %3, align 8
  %7 = getelementptr inbounds %struct.lcd_device, %struct.lcd_device* %6, i32 0, i32 0
  %8 = call %struct.corgi_lcd* @dev_get_drvdata(i32* %7)
  store %struct.corgi_lcd* %8, %struct.corgi_lcd** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @POWER_IS_ON(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load %struct.corgi_lcd*, %struct.corgi_lcd** %5, align 8
  %14 = getelementptr inbounds %struct.corgi_lcd, %struct.corgi_lcd* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @POWER_IS_ON(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %12
  %19 = load %struct.corgi_lcd*, %struct.corgi_lcd** %5, align 8
  %20 = call i32 @corgi_lcd_power_on(%struct.corgi_lcd* %19)
  br label %21

21:                                               ; preds = %18, %12, %2
  %22 = load i32, i32* %4, align 4
  %23 = call i64 @POWER_IS_ON(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %34, label %25

25:                                               ; preds = %21
  %26 = load %struct.corgi_lcd*, %struct.corgi_lcd** %5, align 8
  %27 = getelementptr inbounds %struct.corgi_lcd, %struct.corgi_lcd* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i64 @POWER_IS_ON(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %25
  %32 = load %struct.corgi_lcd*, %struct.corgi_lcd** %5, align 8
  %33 = call i32 @corgi_lcd_power_off(%struct.corgi_lcd* %32)
  br label %34

34:                                               ; preds = %31, %25, %21
  %35 = load i32, i32* %4, align 4
  %36 = load %struct.corgi_lcd*, %struct.corgi_lcd** %5, align 8
  %37 = getelementptr inbounds %struct.corgi_lcd, %struct.corgi_lcd* %36, i32 0, i32 0
  store i32 %35, i32* %37, align 4
  ret i32 0
}

declare dso_local %struct.corgi_lcd* @dev_get_drvdata(i32*) #1

declare dso_local i64 @POWER_IS_ON(i32) #1

declare dso_local i32 @corgi_lcd_power_on(%struct.corgi_lcd*) #1

declare dso_local i32 @corgi_lcd_power_off(%struct.corgi_lcd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
